test/error/error.input073.zc
no loop to continue out from on line 1
